Assert error squeezing a template_curve_mapping in a panel to almost zero horizontally #63605

Closed
opened 2019-04-14 22:47:51 +02:00 by Ulysse Martin · 5 comments

System Information
Operating system: Windows 64
Graphics card: GTX 1080

Blender Version
Broken: 860a9f9
Worked: (optional)

Short description of error
On windows, I was looking at a bug report https://developer.blender.org/T63438 with visual studio in DEBUG mode.
In the file, when we translate the right panel, it leads to an assert error:

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible). (The .blend is in the bug report mentionned earlier)

.gif video:

ui.gif

**System Information** Operating system: Windows 64 Graphics card: GTX 1080 **Blender Version** Broken: 860a9f9 Worked: (optional) **Short description of error** On windows, I was looking at a bug report https://developer.blender.org/T63438 with visual studio in DEBUG mode. In the file, when we translate the right panel, it leads to an assert error: **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). (The .blend is in the bug report mentionned earlier) .gif video: ![ui.gif](https://archive.blender.org/developer/F6945592/ui.gif)
Author

Added subscriber: @you.le

Added subscriber: @you.le
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

(happens when template_curve_mapping is visible in a panel and is squeezed to the extreme horizontally)

Confirmed, checking... (happens when template_curve_mapping is visible in a panel and is squeezed to the extreme horizontally)
Philipp Oeser changed title from Assert error in debug build drawing UI to Assert error squeezing a template_curve_mapping in a panel to almost zero horizontally 2019-04-16 10:05:17 +02:00
Philipp Oeser self-assigned this 2019-04-16 10:20:49 +02:00

This issue was referenced by 56b0cd1db6

This issue was referenced by 56b0cd1db636e94bd8eb928b53816ebf6a951cdf
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63605
No description provided.