Fix T63605: Assert squeezing a template_curve_mapping in a panel to almost zero horizontally

Reviewers: brecht

Maniphest Tasks: T63605

Differential Revision: https://developer.blender.org/D4690